--- a/SRIP/Codes/exp1-code2/html/exp1.html
+++ b/SRIP/Codes/exp1-code2/html/exp1.html
@@ -1,18 +1,21 @@
+<!DOCTYPE html>
 <html>
 
 <body>
-    <center><h3><b><u>Tension Test</u></b></h3></center>
-    <div id="x">
-       <div id="xabox"></div>
-    <div id="xbbox"></div>
-    <div id="xcbox"></div>
-       </div> 
-    <div id="y">
-        <div id="yabox"></div>
-    <div id="ybbox"></div>
-    <div id="ycbox"></div>
-       </div>   
-    
-    
-    </body>
+<center><h3><b><u>Tension Test</u></b></h3></center>
+<p>
+<button onclick="xa(); xb(); xc(); ya(); yb(); yc()">Start</button> 
+</p>
+
+<div id ="xabox"></div>
+<div id ="xbbox"></div>
+<div id ="xcbox"></div>
+<div id ="yabox"></div>
+<div id ="ybbox"></div>
+<div id ="ycbox"></div>
+
+
+
+</body>
 </html>
+
