--- a/SRIP/Codes/exp1-code2/html/exp1.html
+++ b/SRIP/Codes/exp1-code2/html/exp1.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
-
+    <head>
+    <link rel="stylesheet" type="text/css" href="exp.css">
+       <!-- <link rel="stylesheet" type="text/css" href="theme.css">-->
+		 <script type="text/javascript" src="exp.js"></script>
+     <!-- <script src="exp.js">-->
+		</script>
+    </head>
 <body>
+	<script src="exp.js">
+		</script>
 <center><h3><b><u>Tension Test</u></b></h3></center>
 <p>
 <button onclick="xa(); xb(); xc(); ya(); yb(); yc()">Start</button> 
@@ -13,9 +21,5 @@
 <div id ="yabox"></div>
 <div id ="ybbox"></div>
 <div id ="ycbox"></div>
-
-
-
 </body>
 </html>
-
