--- a/SRIP/Codes/exp1-code2/html/exp1.html
+++ b/SRIP/Codes/exp1-code2/html/exp1.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html>
-    <head>
-    <link rel="stylesheet" type="text/css" href="exp.css">
-       <!-- <link rel="stylesheet" type="text/css" href="theme.css">-->
-		 <script type="text/javascript" src="exp.js"></script>
-     <!-- <script src="exp.js">-->
-		</script>
+<head>
+    <link rel="stylesheet" type="text/css" href="test10.css">
+       	 <script type="text/javascript" src="test10.js"></script>
+    		</script>
     </head>
 <body>
-	<script src="exp.js">
-		</script>
-<center><h3><b><u>Tension Test</u></b></h3></center>
+	<center><h3><b><u>Tension Test</u></b></h3></center>
 <p>
-<button onclick="xa(); xb(); xc(); ya(); yb(); yc()">Start</button> 
+<button onclick="xa(); xb(); xc(); xd(); ya(); yb(); yc(); yd(); w1(); w2(); w3()">Start</button> 
 </p>
-
+    
+<div class="arrow-down" id="down"></div>
+<span class="dot" id="dot1"></span>
+<div class="arrow-up" id="up"></div>
+<span class="dot" id="dot3"></span>
+<span class="dot" id="dot4"></span>
+<span class="dot" id="dot2"></span>
 <div id ="xabox"></div>
 <div id ="xbbox"></div>
 <div id ="xcbox"></div>
 <div id ="yabox"></div>
 <div id ="ybbox"></div>
 <div id ="ycbox"></div>
+
+
+<script>
+
+</script>
+
 </body>
 </html>
