--- a/SRIP/Codes/exp1-code2/html/exp1.html
+++ b/SRIP/Codes/exp1-code2/html/exp1.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="test10.css">
-       	 <script type="text/javascript" src="test10.js"></script>
+    <link rel="stylesheet" type="text/css" href="exp1.css">
+       	 <script type="text/javascript" src="exp1.js"></script>
     		</script>
     </head>
 <body>
 	<center><h3><b><u>Tension Test</u></b></h3></center>
 <p>
-<button onclick="xa(); xb(); xc(); xd(); ya(); yb(); yc(); yd(); w1(); w2(); w3()">Start</button> 
+<button onclick="xa(); xb(); xc(); xd(); ya(); yb(); yc(); yd(); w1(); w2()">Start</button> 
 </p>
-    
-<div class="arrow-down" id="down"></div>
+	
+	<div class="trapezoid " id="xdt"></div>
 <span class="dot" id="dot1"></span>
-<div class="arrow-up" id="up"></div>
-<span class="dot" id="dot3"></span>
-<span class="dot" id="dot4"></span>
+	<div class="trapezoid " id="ydt"></div>
 <span class="dot" id="dot2"></span>
 <div id ="xabox"></div>
 <div id ="xbbox"></div>
@@ -23,11 +21,6 @@
 <div id ="yabox"></div>
 <div id ="ybbox"></div>
 <div id ="ycbox"></div>
-
-
-<script>
-
-</script>
-
+	
 </body>
 </html>
