--- a/SRIP/Codes/html/test10.html
+++ b/SRIP/Codes/html/test10.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	
 	<meta charset="utf-8"/>
+	<title>experiment : 1</title>
 	
-     <link rel="stylesheet" type="text/css" href="test10.css">
+	<link rel="stylesheet" type="text/css" href="test10.css">
        
 	
 	
@@ -15,7 +16,7 @@
 	
 <body>
 	
-	<center><h3><b><u>Tension Test</u></b></h3></center>
+	<h3><b><u>Tension Test</u></b></h3>
 <p>
 <button id="start">Start</button> 
 <button id="stop">Stop</button>
