--- a/SRIP/Codes/exp2.html
+++ b/SRIP/Codes/exp2.html
@@ -10,7 +10,7 @@
         </style>
     </head>
 <body>
-
+<center><h1>Impact Test</h1></center>
 <canvas id="Canvas1" width="750" height="1030">
 Your browser does not support the HTML5 canvas tag.</canvas>
           
@@ -76,7 +76,7 @@ ctx.fill();
 ctx.stroke();
 </script>
      <svg width="1000" height="980">
-  <rect x="540" y="550" rx="20" ry="20" width="310" height="55"
+  <rect x="540" y="478" rx="20" ry="20" width="310" height="55"
   style="fill:grey;stroke:black;stroke-width:2;opacity:0.6" />
     </svg>
 </body></html>
